// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > matches the desktop shell snapshot 1`] = `
<main
  class="relative isolate min-h-screen overflow-hidden bg-console-backdrop px-4 py-6 text-slate-50 sm:px-6 sm:py-8"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-[radial-gradient(circle_at_top,_rgba(34,211,238,0.16),_transparent_32%),radial-gradient(circle_at_85%_18%,_rgba(255,107,107,0.18),_transparent_24%),linear-gradient(180deg,_rgba(15,23,42,0.55)_0%,_rgba(2,6,23,0.92)_56%,_rgba(2,6,23,1)_100%)]"
    />
    <div
      class="absolute inset-x-0 top-0 h-40 bg-[repeating-linear-gradient(90deg,rgba(148,163,184,0.08)_0,rgba(148,163,184,0.08)_1px,transparent_1px,transparent_88px)] opacity-60"
    />
    <div
      class="absolute left-1/2 top-[16%] h-72 w-72 -translate-x-1/2 rounded-full bg-joycon-left/10 blur-3xl md:h-96 md:w-96"
    />
    <div
      class="absolute bottom-[14%] right-[10%] h-48 w-48 rounded-full bg-joycon-right/10 blur-3xl md:h-72 md:w-72"
    />
    <div
      class="absolute inset-x-[8%] bottom-[12%] h-px bg-gradient-to-r from-transparent via-white/15 to-transparent"
    />
  </div>
  <div
    class="relative mx-auto flex min-h-[calc(100vh-3rem)] max-w-[88rem] items-center justify-center md:min-h-[calc(100vh-4rem)]"
  >
    <section
      aria-label="Console body"
      class="relative w-full max-w-[74rem] overflow-hidden rounded-[2.5rem] border border-white/10 bg-[linear-gradient(180deg,rgba(51,65,85,0.96)_0%,rgba(30,41,59,0.98)_56%,rgba(15,23,42,1)_100%)] shadow-[0_35px_120px_rgba(2,6,23,0.65)] ring-1 ring-white/5 md:min-h-[38rem] md:rounded-[3rem]"
      data-layout="desktop"
    >
      <div
        class="pointer-events-none absolute inset-x-8 top-0 h-24 rounded-b-[2rem] bg-gradient-to-b from-white/10 to-transparent blur-2xl"
      />
      <div
        class="grid gap-0 grid-cols-[minmax(12rem,15rem)_minmax(0,1fr)_minmax(12rem,15rem)]"
      >
        <aside
          class="bg-console-panel/20 px-3 py-3 md:px-4 md:py-4 "
        >
          <section
            aria-label="Left joycon region"
            class="relative flex h-full min-h-[18rem] flex-col overflow-hidden rounded-[2rem] border border-cyan-200/35 bg-[linear-gradient(180deg,rgba(34,211,238,0.98)_0%,rgba(14,165,233,0.96)_48%,rgba(8,145,178,0.98)_100%)] px-5 py-6 text-slate-950 shadow-[inset_0_1px_0_rgba(255,255,255,0.22),inset_0_-16px_30px_rgba(8,47,73,0.22)]"
          >
            <div
              class="pointer-events-none absolute inset-y-6 left-3 w-px bg-white/20"
            />
            <div
              class="pointer-events-none absolute right-4 top-10 h-28 w-28 rounded-full bg-white/10 blur-2xl"
            />
            <div
              class="relative flex items-start justify-between"
            >
              <div>
                <p
                  class="text-[0.65rem] font-black uppercase tracking-[0.34em] text-slate-950/65"
                >
                  Left Joycon
                </p>
                <p
                  class="mt-2 text-sm font-semibold text-slate-950/70"
                >
                  Game menu slot
                </p>
              </div>
              <div
                class="h-4 w-4 rounded-full border border-white/40 bg-white/20 shadow-[0_0_18px_rgba(255,255,255,0.25)]"
              />
            </div>
            <div
              class="relative mt-6 flex items-center justify-center"
            >
              <div
                class="absolute h-28 w-28 rounded-full bg-slate-950/10 blur-xl"
              />
              <div
                class="relative grid h-24 w-24 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.32),rgba(15,23,42,0.22)_55%,rgba(15,23,42,0.45)_100%)] shadow-[inset_0_3px_10px_rgba(255,255,255,0.2),0_18px_28px_rgba(14,116,144,0.25)]"
              >
                <div
                  class="h-12 w-12 rounded-full border border-slate-950/25 bg-slate-900/70 shadow-[inset_0_2px_8px_rgba(255,255,255,0.12)]"
                />
              </div>
            </div>
            <div
              class="mt-8 grid place-items-center"
            >
              <div
                class="relative h-24 w-24"
              >
                <div
                  class="absolute left-1/2 top-0 h-full w-7 -translate-x-1/2 rounded-2xl border border-slate-950/15 bg-slate-950/18 shadow-[inset_0_1px_4px_rgba(255,255,255,0.15)]"
                />
                <div
                  class="absolute left-0 top-1/2 h-7 w-full -translate-y-1/2 rounded-2xl border border-slate-950/15 bg-slate-950/18 shadow-[inset_0_1px_4px_rgba(255,255,255,0.15)]"
                />
                <div
                  class="absolute left-1/2 top-1/2 h-8 w-8 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-slate-950/30 shadow-[0_0_12px_rgba(15,23,42,0.16)]"
                />
                <div
                  class="absolute left-1/2 top-2 h-3 w-3 -translate-x-1/2 rounded-full bg-white/45"
                />
                <div
                  class="absolute bottom-2 left-1/2 h-3 w-3 -translate-x-1/2 rounded-full bg-white/28"
                />
                <div
                  class="absolute left-2 top-1/2 h-3 w-3 -translate-y-1/2 rounded-full bg-white/28"
                />
                <div
                  class="absolute right-2 top-1/2 h-3 w-3 -translate-y-1/2 rounded-full bg-white/45"
                />
              </div>
            </div>
            <div
              class="relative mt-8 rounded-[1.75rem] border border-slate-950/15 bg-slate-950/12 p-4 shadow-[inset_0_1px_0_rgba(255,255,255,0.12)]"
            >
              <div
                class="absolute inset-x-4 top-0 h-px bg-gradient-to-r from-transparent via-white/35 to-transparent"
              />
              <p
                class="text-sm font-medium text-slate-950/80"
              >
                Placeholder region for future controls and game selection.
              </p>
            </div>
          </section>
        </aside>
        <section
          class="bg-console-panel/95 px-4 py-6 sm:px-6 sm:py-8 md:px-8 md:py-10"
        >
          <section
            aria-label="Center display bezel"
            class="rounded-[2rem] border border-white/6 bg-[linear-gradient(180deg,rgba(2,6,23,0.98)_0%,rgba(3,7,18,1)_100%)] p-3 shadow-[inset_0_1px_0_rgba(255,255,255,0.04),0_12px_30px_rgba(2,6,23,0.3)] sm:p-4"
          >
            <div
              class="mb-3 flex items-center justify-between px-2 text-[0.65rem] font-black uppercase tracking-[0.28em] text-slate-500"
            >
              <span>
                Screen
              </span>
              <span>
                Display
              </span>
            </div>
            <div
              aria-label="Inner display region"
              class="aspect-[16/10] w-full overflow-hidden rounded-[1.5rem] border border-white/6 bg-[radial-gradient(circle_at_top,rgba(56,189,248,0.12),transparent_28%),linear-gradient(180deg,rgba(15,23,42,0.96)_0%,rgba(2,6,23,1)_100%)] shadow-[inset_0_1px_0_rgba(255,255,255,0.06)]"
            >
              <div
                class="h-full w-full overflow-auto px-5 py-6 sm:px-6 sm:py-8"
              >
                <section
                  class="flex h-full min-h-full items-center justify-center"
                >
                  <div
                    class="w-full max-w-2xl rounded-[1.5rem] border border-cyan-400/10 bg-slate-950/35 px-6 py-10 text-center shadow-[inset_0_1px_0_rgba(255,255,255,0.03)] backdrop-blur-sm sm:px-10 sm:py-14"
                  >
                    <p
                      class="font-mono text-xs uppercase tracking-[0.44em] text-cyan-300/75"
                    >
                      Boot Sequence Ready
                    </p>
                    <h1
                      class="mt-6 font-mono text-3xl font-semibold uppercase tracking-[0.14em] text-cyan-100 sm:text-4xl"
                    >
                      Choose a game to start playing
                    </h1>
                    <p
                      class="mt-5 font-mono text-sm leading-7 text-slate-300 sm:text-base"
                    >
                      Select a cartridge from the left controller to initialize the arcade session.
                    </p>
                    <div
                      class="mt-8 flex flex-wrap items-center justify-center gap-3 font-mono text-xs text-slate-300 sm:text-sm"
                    >
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        route=welcome
                      </p>
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        VITE_HEXGL_BASE_PATH=
                        /hexgl/
                      </p>
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        registeredGames=
                        0
                      </p>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </section>
        </section>
        <aside
          class="bg-console-panel/20 px-3 py-3 md:px-4 md:py-4 "
        >
          <section
            aria-label="Right joycon region"
            class="relative flex h-full min-h-[18rem] flex-col overflow-hidden rounded-[2rem] border border-rose-200/35 bg-[linear-gradient(180deg,rgba(255,107,107,0.98)_0%,rgba(248,113,113,0.96)_46%,rgba(220,38,38,0.98)_100%)] px-5 py-6 text-slate-950 shadow-[inset_0_1px_0_rgba(255,255,255,0.2),inset_0_-16px_32px_rgba(127,29,29,0.26)]"
          >
            <div
              class="pointer-events-none absolute inset-y-6 right-3 w-px bg-white/20"
            />
            <div
              class="pointer-events-none absolute left-4 top-10 h-28 w-28 rounded-full bg-white/10 blur-2xl"
            />
            <div
              class="relative flex items-start justify-between gap-4 text-right"
            >
              <div
                class="h-4 w-4 rounded-full border border-white/40 bg-white/20 shadow-[0_0_18px_rgba(255,255,255,0.25)]"
              />
              <div
                class="ml-auto"
              >
                <p
                  class="text-[0.65rem] font-black uppercase tracking-[0.34em] text-slate-950/65"
                >
                  Right Joycon
                </p>
                <p
                  class="mt-2 text-sm font-semibold text-slate-950/70"
                >
                  End button slot
                </p>
              </div>
            </div>
            <div
              class="relative mt-6 flex items-center justify-center"
            >
              <div
                class="relative h-24 w-24"
              >
                <div
                  class="absolute top-0 left-1/2 -translate-x-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  X
                </div>
                <div
                  class="absolute top-1/2 right-0 -translate-y-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  A
                </div>
                <div
                  class="absolute bottom-0 left-1/2 -translate-x-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  B
                </div>
                <div
                  class="absolute top-1/2 left-0 -translate-y-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  Y
                </div>
                <div
                  class="absolute left-1/2 top-1/2 h-8 w-8 -translate-x-1/2 -translate-y-1/2 rounded-full bg-slate-950/18 shadow-[0_0_14px_rgba(15,23,42,0.14)]"
                />
              </div>
            </div>
            <div
              class="relative mt-8 flex items-center justify-center"
            >
              <div
                class="absolute h-28 w-28 rounded-full bg-slate-950/10 blur-xl"
              />
              <div
                class="relative grid h-24 w-24 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.3),rgba(15,23,42,0.22)_55%,rgba(15,23,42,0.46)_100%)] shadow-[inset_0_3px_10px_rgba(255,255,255,0.18),0_18px_28px_rgba(127,29,29,0.25)]"
              >
                <div
                  class="h-12 w-12 rounded-full border border-slate-950/25 bg-slate-900/72 shadow-[inset_0_2px_8px_rgba(255,255,255,0.12)]"
                />
              </div>
            </div>
            <div
              class="mt-8 flex justify-end gap-3 pr-1"
            >
              <div
                class="h-3 w-3 rounded-full bg-white/30"
              />
              <div
                class="h-3 w-3 rounded-full bg-white/45"
              />
              <div
                class="h-3 w-3 rounded-full bg-white/30"
              />
            </div>
            <div
              class="relative mt-8 rounded-[1.75rem] border border-slate-950/15 bg-slate-950/12 p-4 shadow-[inset_0_1px_0_rgba(255,255,255,0.12)]"
            >
              <div
                class="absolute inset-x-4 top-0 h-px bg-gradient-to-r from-transparent via-white/35 to-transparent"
              />
              <p
                class="text-sm font-medium text-slate-950/80"
              >
                Placeholder region for future actions and status controls.
              </p>
            </div>
          </section>
        </aside>
      </div>
    </section>
  </div>
</main>
`;

exports[`App > matches the tablet shell snapshot 1`] = `
<main
  class="relative isolate min-h-screen overflow-hidden bg-console-backdrop px-4 py-6 text-slate-50 sm:px-6 sm:py-8"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-[radial-gradient(circle_at_top,_rgba(34,211,238,0.16),_transparent_32%),radial-gradient(circle_at_85%_18%,_rgba(255,107,107,0.18),_transparent_24%),linear-gradient(180deg,_rgba(15,23,42,0.55)_0%,_rgba(2,6,23,0.92)_56%,_rgba(2,6,23,1)_100%)]"
    />
    <div
      class="absolute inset-x-0 top-0 h-40 bg-[repeating-linear-gradient(90deg,rgba(148,163,184,0.08)_0,rgba(148,163,184,0.08)_1px,transparent_1px,transparent_88px)] opacity-60"
    />
    <div
      class="absolute left-1/2 top-[16%] h-72 w-72 -translate-x-1/2 rounded-full bg-joycon-left/10 blur-3xl md:h-96 md:w-96"
    />
    <div
      class="absolute bottom-[14%] right-[10%] h-48 w-48 rounded-full bg-joycon-right/10 blur-3xl md:h-72 md:w-72"
    />
    <div
      class="absolute inset-x-[8%] bottom-[12%] h-px bg-gradient-to-r from-transparent via-white/15 to-transparent"
    />
  </div>
  <div
    class="relative mx-auto flex min-h-[calc(100vh-3rem)] max-w-[88rem] items-center justify-center md:min-h-[calc(100vh-4rem)]"
  >
    <section
      aria-label="Console body"
      class="relative w-full max-w-[74rem] overflow-hidden rounded-[2.5rem] border border-white/10 bg-[linear-gradient(180deg,rgba(51,65,85,0.96)_0%,rgba(30,41,59,0.98)_56%,rgba(15,23,42,1)_100%)] shadow-[0_35px_120px_rgba(2,6,23,0.65)] ring-1 ring-white/5 md:min-h-[38rem] md:rounded-[3rem]"
      data-layout="tablet"
    >
      <div
        class="pointer-events-none absolute inset-x-8 top-0 h-24 rounded-b-[2rem] bg-gradient-to-b from-white/10 to-transparent blur-2xl"
      />
      <div
        class="grid gap-0 grid-cols-1"
      >
        <aside
          class="bg-console-panel/20 px-3 py-3 md:px-4 md:py-4 border-b border-white/6"
        >
          <section
            aria-label="Left joycon region"
            class="relative flex h-full min-h-[18rem] flex-col overflow-hidden rounded-[2rem] border border-cyan-200/35 bg-[linear-gradient(180deg,rgba(34,211,238,0.98)_0%,rgba(14,165,233,0.96)_48%,rgba(8,145,178,0.98)_100%)] px-5 py-6 text-slate-950 shadow-[inset_0_1px_0_rgba(255,255,255,0.22),inset_0_-16px_30px_rgba(8,47,73,0.22)]"
          >
            <div
              class="pointer-events-none absolute inset-y-6 left-3 w-px bg-white/20"
            />
            <div
              class="pointer-events-none absolute right-4 top-10 h-28 w-28 rounded-full bg-white/10 blur-2xl"
            />
            <div
              class="relative flex items-start justify-between"
            >
              <div>
                <p
                  class="text-[0.65rem] font-black uppercase tracking-[0.34em] text-slate-950/65"
                >
                  Left Joycon
                </p>
                <p
                  class="mt-2 text-sm font-semibold text-slate-950/70"
                >
                  Game menu slot
                </p>
              </div>
              <div
                class="h-4 w-4 rounded-full border border-white/40 bg-white/20 shadow-[0_0_18px_rgba(255,255,255,0.25)]"
              />
            </div>
            <div
              class="relative mt-6 flex items-center justify-center"
            >
              <div
                class="absolute h-28 w-28 rounded-full bg-slate-950/10 blur-xl"
              />
              <div
                class="relative grid h-24 w-24 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.32),rgba(15,23,42,0.22)_55%,rgba(15,23,42,0.45)_100%)] shadow-[inset_0_3px_10px_rgba(255,255,255,0.2),0_18px_28px_rgba(14,116,144,0.25)]"
              >
                <div
                  class="h-12 w-12 rounded-full border border-slate-950/25 bg-slate-900/70 shadow-[inset_0_2px_8px_rgba(255,255,255,0.12)]"
                />
              </div>
            </div>
            <div
              class="mt-8 grid place-items-center"
            >
              <div
                class="relative h-24 w-24"
              >
                <div
                  class="absolute left-1/2 top-0 h-full w-7 -translate-x-1/2 rounded-2xl border border-slate-950/15 bg-slate-950/18 shadow-[inset_0_1px_4px_rgba(255,255,255,0.15)]"
                />
                <div
                  class="absolute left-0 top-1/2 h-7 w-full -translate-y-1/2 rounded-2xl border border-slate-950/15 bg-slate-950/18 shadow-[inset_0_1px_4px_rgba(255,255,255,0.15)]"
                />
                <div
                  class="absolute left-1/2 top-1/2 h-8 w-8 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-slate-950/30 shadow-[0_0_12px_rgba(15,23,42,0.16)]"
                />
                <div
                  class="absolute left-1/2 top-2 h-3 w-3 -translate-x-1/2 rounded-full bg-white/45"
                />
                <div
                  class="absolute bottom-2 left-1/2 h-3 w-3 -translate-x-1/2 rounded-full bg-white/28"
                />
                <div
                  class="absolute left-2 top-1/2 h-3 w-3 -translate-y-1/2 rounded-full bg-white/28"
                />
                <div
                  class="absolute right-2 top-1/2 h-3 w-3 -translate-y-1/2 rounded-full bg-white/45"
                />
              </div>
            </div>
            <div
              class="relative mt-8 rounded-[1.75rem] border border-slate-950/15 bg-slate-950/12 p-4 shadow-[inset_0_1px_0_rgba(255,255,255,0.12)]"
            >
              <div
                class="absolute inset-x-4 top-0 h-px bg-gradient-to-r from-transparent via-white/35 to-transparent"
              />
              <p
                class="text-sm font-medium text-slate-950/80"
              >
                Placeholder region for future controls and game selection.
              </p>
            </div>
          </section>
        </aside>
        <section
          class="bg-console-panel/95 px-4 py-6 sm:px-6 sm:py-8 md:px-8 md:py-10"
        >
          <section
            aria-label="Center display bezel"
            class="rounded-[2rem] border border-white/6 bg-[linear-gradient(180deg,rgba(2,6,23,0.98)_0%,rgba(3,7,18,1)_100%)] p-3 shadow-[inset_0_1px_0_rgba(255,255,255,0.04),0_12px_30px_rgba(2,6,23,0.3)] sm:p-4"
          >
            <div
              class="mb-3 flex items-center justify-between px-2 text-[0.65rem] font-black uppercase tracking-[0.28em] text-slate-500"
            >
              <span>
                Screen
              </span>
              <span>
                Display
              </span>
            </div>
            <div
              aria-label="Inner display region"
              class="aspect-[16/10] w-full overflow-hidden rounded-[1.5rem] border border-white/6 bg-[radial-gradient(circle_at_top,rgba(56,189,248,0.12),transparent_28%),linear-gradient(180deg,rgba(15,23,42,0.96)_0%,rgba(2,6,23,1)_100%)] shadow-[inset_0_1px_0_rgba(255,255,255,0.06)]"
            >
              <div
                class="h-full w-full overflow-auto px-5 py-6 sm:px-6 sm:py-8"
              >
                <section
                  class="flex h-full min-h-full items-center justify-center"
                >
                  <div
                    class="w-full max-w-2xl rounded-[1.5rem] border border-cyan-400/10 bg-slate-950/35 px-6 py-10 text-center shadow-[inset_0_1px_0_rgba(255,255,255,0.03)] backdrop-blur-sm sm:px-10 sm:py-14"
                  >
                    <p
                      class="font-mono text-xs uppercase tracking-[0.44em] text-cyan-300/75"
                    >
                      Boot Sequence Ready
                    </p>
                    <h1
                      class="mt-6 font-mono text-3xl font-semibold uppercase tracking-[0.14em] text-cyan-100 sm:text-4xl"
                    >
                      Choose a game to start playing
                    </h1>
                    <p
                      class="mt-5 font-mono text-sm leading-7 text-slate-300 sm:text-base"
                    >
                      Select a cartridge from the left controller to initialize the arcade session.
                    </p>
                    <div
                      class="mt-8 flex flex-wrap items-center justify-center gap-3 font-mono text-xs text-slate-300 sm:text-sm"
                    >
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        route=welcome
                      </p>
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        VITE_HEXGL_BASE_PATH=
                        /hexgl/
                      </p>
                      <p
                        class="rounded-full border border-white/10 bg-white/5 px-4 py-2"
                      >
                        registeredGames=
                        0
                      </p>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </section>
        </section>
        <aside
          class="bg-console-panel/20 px-3 py-3 md:px-4 md:py-4 border-t border-white/6"
        >
          <section
            aria-label="Right joycon region"
            class="relative flex h-full min-h-[18rem] flex-col overflow-hidden rounded-[2rem] border border-rose-200/35 bg-[linear-gradient(180deg,rgba(255,107,107,0.98)_0%,rgba(248,113,113,0.96)_46%,rgba(220,38,38,0.98)_100%)] px-5 py-6 text-slate-950 shadow-[inset_0_1px_0_rgba(255,255,255,0.2),inset_0_-16px_32px_rgba(127,29,29,0.26)]"
          >
            <div
              class="pointer-events-none absolute inset-y-6 right-3 w-px bg-white/20"
            />
            <div
              class="pointer-events-none absolute left-4 top-10 h-28 w-28 rounded-full bg-white/10 blur-2xl"
            />
            <div
              class="relative flex items-start justify-between gap-4 text-right"
            >
              <div
                class="h-4 w-4 rounded-full border border-white/40 bg-white/20 shadow-[0_0_18px_rgba(255,255,255,0.25)]"
              />
              <div
                class="ml-auto"
              >
                <p
                  class="text-[0.65rem] font-black uppercase tracking-[0.34em] text-slate-950/65"
                >
                  Right Joycon
                </p>
                <p
                  class="mt-2 text-sm font-semibold text-slate-950/70"
                >
                  End button slot
                </p>
              </div>
            </div>
            <div
              class="relative mt-6 flex items-center justify-center"
            >
              <div
                class="relative h-24 w-24"
              >
                <div
                  class="absolute top-0 left-1/2 -translate-x-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  X
                </div>
                <div
                  class="absolute top-1/2 right-0 -translate-y-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  A
                </div>
                <div
                  class="absolute bottom-0 left-1/2 -translate-x-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  B
                </div>
                <div
                  class="absolute top-1/2 left-0 -translate-y-1/2 grid h-8 w-8 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.4),rgba(15,23,42,0.18)_55%,rgba(15,23,42,0.38)_100%)] text-[0.65rem] font-black shadow-[inset_0_2px_6px_rgba(255,255,255,0.2),0_10px_18px_rgba(127,29,29,0.16)]"
                >
                  Y
                </div>
                <div
                  class="absolute left-1/2 top-1/2 h-8 w-8 -translate-x-1/2 -translate-y-1/2 rounded-full bg-slate-950/18 shadow-[0_0_14px_rgba(15,23,42,0.14)]"
                />
              </div>
            </div>
            <div
              class="relative mt-8 flex items-center justify-center"
            >
              <div
                class="absolute h-28 w-28 rounded-full bg-slate-950/10 blur-xl"
              />
              <div
                class="relative grid h-24 w-24 place-items-center rounded-full border border-slate-950/20 bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.3),rgba(15,23,42,0.22)_55%,rgba(15,23,42,0.46)_100%)] shadow-[inset_0_3px_10px_rgba(255,255,255,0.18),0_18px_28px_rgba(127,29,29,0.25)]"
              >
                <div
                  class="h-12 w-12 rounded-full border border-slate-950/25 bg-slate-900/72 shadow-[inset_0_2px_8px_rgba(255,255,255,0.12)]"
                />
              </div>
            </div>
            <div
              class="mt-8 flex justify-end gap-3 pr-1"
            >
              <div
                class="h-3 w-3 rounded-full bg-white/30"
              />
              <div
                class="h-3 w-3 rounded-full bg-white/45"
              />
              <div
                class="h-3 w-3 rounded-full bg-white/30"
              />
            </div>
            <div
              class="relative mt-8 rounded-[1.75rem] border border-slate-950/15 bg-slate-950/12 p-4 shadow-[inset_0_1px_0_rgba(255,255,255,0.12)]"
            >
              <div
                class="absolute inset-x-4 top-0 h-px bg-gradient-to-r from-transparent via-white/35 to-transparent"
              />
              <p
                class="text-sm font-medium text-slate-950/80"
              >
                Placeholder region for future actions and status controls.
              </p>
            </div>
          </section>
        </aside>
      </div>
    </section>
  </div>
</main>
`;
